--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "framer-motion": "^11.3.2",
+    "lottie-react": "^2.4.0",
     "next-router": "^1.3.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "router": "^1.3.8"
   },
@@ -28,6 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   }
 }
