--- a/my-project/package.json
+++ b/my-project/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
+    "antd": "^5.19.4",
+    "emailjs": "^4.0.3",
     "framer-motion": "^11.3.2",
     "lottie-react": "^2.4.0",
     "next-router": "^1.3.6",
     "react": "^18.3.1",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
