--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://YOUNESyoyou123.github.io/Portfolio",
+  "homepage": "https://YOUNESyoyou123.github.io/prt2",
   "name": "my-project",
   "private": true,
   "version": "0.0.0",
