--- a/my-project/package.json
+++ b/my-project/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://YOUNESyoyou123.github.io/Portfolio",
+  "homepage": "https://chems-zrg.github.io/youy",
   "name": "my-project",
   "private": true,
   "version": "0.0.0",
